kubernetes/apps/external-services/paperless/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: paperless
  namespace: external-services
subsets:
  - addresses:
      - ip: 10.69.10.11
    ports:
      - name: http
        port: 10140
        protocol: TCP
