kubernetes/apps/external-services/paperless/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: external-services
  annotations:
    external-dns.home.arpa/enabled: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx
  tls:
    - secretName: tls.paperless
      hosts:
        - "docs.${SECRET_DOMAIN}"

  rules:
    - host: docs.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  name: http
